--- a/productos.html
+++ b/productos.html
@@ -21,6 +21,14 @@
     transform: scale(1.1);
     box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3); /* sombra azul */
   }
+
+  .whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 999;
+  }
+
 </style>
 
 
@@ -83,5 +91,6 @@
 
   <!-- Script que carga productos -->
   <script src="js/productos.js"></script>
+  <script src="js/whatsapp-button.js"></script>
 </body>
 </html>
