--- a/servicios.html
+++ b/servicios.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Continental | Servicios</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+  .whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 999;
+  }
+</style>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
@@ -99,6 +107,6 @@
       </div>
     </div>
   </footer>
-
+<script src="js/whatsapp-button.js"></script>
 </body>
 </html>
