Correcion en algunas url , se agrego la pagina de contacto , se agregaron imagenes de dispositivos reales se edito el productos.js

--- a/productos.html
+++ b/productos.html
@@ -39,7 +39,7 @@
   <header class="bg-white shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
       <a href="index.html">
-        <img src="img/logo.jpg" alt="Logo Continental" class="h-12">
+        <img src="img/logo.jpeg" alt="Logo Continental" class="h-12">
       </a>
       <nav class="space-x-6 text-sm font-medium">
         <a href="index.html">Inicio</a>
@@ -59,10 +59,10 @@
   <!--FILTROS-->
 <div class="text-center mb-10">
   <button data-categoria="todos" onclick="filtrarProductos('todos')" class="filtro bg-blue-600 text-white px-4 py-2 rounded m-1 active">Todos</button>
+  <button data-categoria="multifuncional" onclick="filtrarProductos('multifuncional')" class="filtro bg-gray-200 px-4 py-2 rounded m-1">Multifuncional</button>
   <button data-categoria="impresion" onclick="filtrarProductos('impresion')" class="filtro bg-gray-200 px-4 py-2 rounded m-1">Impresión</button>
   <button data-categoria="scanner" onclick="filtrarProductos('scanner')" class="filtro bg-gray-200 px-4 py-2 rounded m-1">Scanners</button>
   <button data-categoria="proyector" onclick="filtrarProductos('proyector')" class="filtro bg-gray-200 px-4 py-2 rounded m-1">Proyectores</button>
-  <button data-categoria="remanufacturada" onclick="filtrarProductos('remanufacturada')" class="filtro bg-gray-200 px-4 py-2 rounded m-1">Remanufacturadas</button>
 </div>
 
 
