--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
   <header class="bg-white shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
       <a href="index.html">
-        <img src="img/logo.jpg" alt="Logo Continental" class="h-12">
+        <img src="img/logo.jpeg" alt="Logo Continental" class="h-12">
       </a>
       <nav class="space-x-6 text-sm font-medium">
         <a href="index.html">Inicio</a>
