Correccionde de rutas , agregando imagenes y otros estilos , corrigiendo detalles...

--- a/nosotros.html
+++ b/nosotros.html
@@ -73,9 +73,9 @@
           <h3 class="text-xl font-bold mb-3 text-blue-600">Nuestra Misión</h3>
           <p>Brindar soluciones integrales en máquinas de impresión y papelería con calidad, innovación y excelente servicio al cliente.</p>
         </div>
-        <div class="p-6 border rounded-lg shadow-sm hover:shadow-md transition">
-          <h3 class="text-xl font-bold mb-3 text-blue-600">Valores</h3>
-          <ul class="list-disc list-inside text-gray-700">
+        <div class="p-6 border rounded-lg shadow-sm hover:shadow-md transition text-left">
+          <h3 class="text-xl font-bold mb-3 text-blue-600 text-center">Valores</h3>
+          <ul class="list-disc list-outside pl-5 text-gray-700 space-y-1">
             <li>Compromiso</li>
             <li>Calidad</li>
             <li>Responsabilidad</li>
@@ -96,19 +96,19 @@
     <h2 class="text-3xl font-semibold mb-8 text-center">Nuestro Equipo</h2>
     <div class="grid grid-cols-1 sm:grid-cols-3 gap-8">
       <div class="bg-white p-6 rounded-lg shadow-md text-center">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Juan Perez" class="w-32 h-32 rounded-full mx-auto mb-4" />
-        <h3 class="text-xl font-semibold">Juan Pérez</h3>
+        <img src="img/gerentes/angelaViloria.jpg" alt="Juan Perez" class="w-32 h-32 rounded-full mx-auto mb-4" />
+        <h3 class="text-xl font-semibold">Angela Viloria</h3>
+        <p class="text-gray-600">Gerente</p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow-md text-center">
+        <img src="img/gerentes/DONALDOVILORIA.jpg" alt="María Gómez" class="w-32 h-32 rounded-full mx-auto mb-4" />
+        <h3 class="text-xl font-semibold">Donaldo Viloria</h3>
         <p class="text-gray-600">Gerente General</p>
       </div>
       <div class="bg-white p-6 rounded-lg shadow-md text-center">
-        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="María Gómez" class="w-32 h-32 rounded-full mx-auto mb-4" />
-        <h3 class="text-xl font-semibold">María Gómez</h3>
+        <img src="img/gerentes/johanaviloria.jpg" alt="Carlos Martínez" class="w-32 h-32 rounded-full mx-auto mb-4" />
+        <h3 class="text-xl font-semibold">Johana Viloria</h3>
         <p class="text-gray-600">Jefa de Ventas</p>
-      </div>
-      <div class="bg-white p-6 rounded-lg shadow-md text-center">
-        <img src="https://randomuser.me/api/portraits/men/54.jpg" alt="Carlos Martínez" class="w-32 h-32 rounded-full mx-auto mb-4" />
-        <h3 class="text-xl font-semibold">Carlos Martínez</h3>
-        <p class="text-gray-600">Técnico Especializado</p>
       </div>
     </div>
   </section>
@@ -119,11 +119,11 @@
     <div class="max-w-4xl mx-auto space-y-8 px-6">
       <blockquote class="bg-white p-6 rounded-lg shadow-md italic text-gray-700">
         "Excelente atención y asesoría. Las máquinas remanufacturadas funcionan a la perfección y tienen garantía."
-        <footer class="mt-4 text-right font-semibold">- Ana López</footer>
+        <footer class="mt-4 text-right font-semibold">- Victor Zuleta Lantor</footer>
       </blockquote>
       <blockquote class="bg-white p-6 rounded-lg shadow-md italic text-gray-700">
         "Servicio rápido y confiable. Siempre atentos a nuestras necesidades con las impresoras y escáneres."
-        <footer class="mt-4 text-right font-semibold">- Pedro Ramírez</footer>
+        <footer class="mt-4 text-right font-semibold">- Alcaldesa Cielomar P.</footer>
       </blockquote>
     </div>
   </section>
@@ -133,11 +133,11 @@
     <h2 class="text-3xl font-semibold mb-8 text-center">Datos Clave</h2>
     <div class="grid grid-cols-1 sm:grid-cols-3 gap-12 text-center text-gray-700">
       <div>
-        <div class="text-5xl text-blue-600 mb-2">500+</div>
+        <div class="text-5xl text-blue-600 mb-2">1000+</div>
         <div class="font-semibold">Clientes satisfechos</div>
       </div>
       <div>
-        <div class="text-5xl text-blue-600 mb-2">18 años</div>
+        <div class="text-5xl text-blue-600 mb-2">30 años</div>
         <div class="font-semibold">De experiencia en el mercado</div>
       </div>
       <div>
@@ -146,7 +146,6 @@
       </div>
     </div>
   </section>
-
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-6 mt-8">
     <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between">
