--- a/servicios.html
+++ b/servicios.html
@@ -46,7 +46,7 @@
       
       <!-- Servicio 1 -->
       <div class="bg-white rounded-lg shadow-md p-6 text-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png" alt="Mantenimiento" class="h-20 mx-auto mb-4">
+        <img src="img/reparacion.jpg" alt="Mantenimiento" class="h-40 mx-auto mb-4">
         <h3 class="text-xl font-semibold mb-2">Mantenimiento Preventivo y Correctivo</h3>
         <p class="text-sm text-gray-600">
           Realizamos mantenimiento a impresoras, escáneres, fotocopiadoras y otros equipos, garantizando su funcionamiento óptimo.
@@ -55,7 +55,7 @@
 
       <!-- Servicio 2 -->
       <div class="bg-white rounded-lg shadow-md p-6 text-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/3022/3022229.png" alt="Reparación" class="h-20 mx-auto mb-4">
+        <img src="img/matenimiento.jpg" alt="Reparación" class="h-40 mx-auto mb-4">
         <h3 class="text-xl font-semibold mb-2">Reparación de Equipos</h3>
         <p class="text-sm text-gray-600">
           Solucionamos fallas en máquinas de impresión, proyectores y computadores con repuestos de alta calidad.
@@ -64,7 +64,7 @@
 
       <!-- Servicio 3 -->
       <div class="bg-white rounded-lg shadow-md p-6 text-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/2620/2620393.png" alt="Toners" class="h-20 mx-auto mb-4">
+        <img src="img/toner.jpg" alt="Toners" class="h-40 mx-auto mb-4">
         <h3 class="text-xl font-semibold mb-2">Venta de Tóners y Repuestos</h3>
         <p class="text-sm text-gray-600">
           Ofrecemos tóners originales y compatibles, además de piezas y consumibles para equipos remanufacturados.
@@ -73,7 +73,7 @@
 
       <!-- Servicio 4 -->
       <div class="bg-white rounded-lg shadow-md p-6 text-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/3208/3208676.png" alt="Remanufactura" class="h-20 mx-auto mb-4">
+        <img src="img/reacondicionamiento.webp" alt="Remanufactura" class="h-40 mx-auto mb-4">
         <h3 class="text-xl font-semibold mb-2">Reacondicionamiento de Máquinas</h3>
         <p class="text-sm text-gray-600">
           Damos nueva vida a equipos usados mediante un proceso técnico de remanufactura y calibración.
@@ -82,7 +82,7 @@
 
       <!-- Servicio 5 -->
       <div class="bg-white rounded-lg shadow-md p-6 text-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/184/184569.png" alt="Asesoría" class="h-20 mx-auto mb-4">
+        <img src="img/venta.jpg" alt="Asesoría" class="h-40 mx-auto mb-4">
         <h3 class="text-xl font-semibold mb-2">Asesoría y Venta Personalizada</h3>
         <p class="text-sm text-gray-600">
           Te ayudamos a elegir el equipo adecuado para tu empresa o negocio, según tus necesidades.
