--- a/nosotros.html
+++ b/nosotros.html
@@ -146,7 +146,7 @@
       </div>
     </div>
   </section>
-  <!-- Footer -->
+  <!-- FOOTER -->
   <footer class="bg-gray-800 text-white py-6 mt-8">
     <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between">
       <div>
@@ -159,6 +159,10 @@
         <h4 class="font-bold">Síguenos</h4>
         <p>Instagram: @continental_ltda</p>
       </div>
+    </div>
+    <hr>
+    <div class="flex flex-row justify-center">
+      <p>&copy; 2025 Continental. Todos los derechos reservados.</p>
     </div>
   </footer>
 <script src="js/whatsapp-button.js"></script>
