--- a/productos.html
+++ b/productos.html
@@ -73,7 +73,7 @@
     <!-- Aquí se cargarán los productos con JS -->
   </section>
 
-  <!-- Footer -->
+  <!-- FOOTER -->
   <footer class="bg-gray-800 text-white py-6 mt-8">
     <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between">
       <div>
@@ -86,6 +86,10 @@
         <h4 class="font-bold">Síguenos</h4>
         <p>Instagram: @continental_ltda</p>
       </div>
+    </div>
+    <hr>
+    <div class="flex flex-row justify-center">
+      <p>&copy; 2025 Continental. Todos los derechos reservados.</p>
     </div>
   </footer>
 
